# axioms

./: LICENSE  README.md  apply_configs.py  install.sh  install.zsh  master-config.toml  pyproject.toml  tasks.py
git/: gitconfig
shell/: aliases.zsh  tmux.conf  zshrc.sh  zshrc.zsh
terminal/: alacritty.yml  kitty.conf  starship.toml
vscode-settings/: extensions.json  extensions.toml  settings.json
