[tool.poetry]
name = "axioms"
version = "0.4.3"
description = "Install all the necessary development programs and configuration files."
authors = ["edwinb-ai <developeredwin@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"
invoke = "^1.3"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
